# fastapi-project

./: .gitignore  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
tests/: conftest.py  test_users.py
timetable/: Dockerfile  alembic.ini  main.py
timetable/alembic/: env.py
timetable/alembic/versions/: 2024_05_30_2028-e02979c6a5a7_добавлена_модель_user.py  2024_06_15_2115-7af884c81581_cteat_all_models.py  2024_06_27_2004-8ab8b44881ad_created_all_models.py
timetable/api/: __init__.py  login.py  profile.py  timetable.py  trener.py  users.py
timetable/api/api_v1/: users.py
timetable/authentication/: auth.py  utils.py  validate.py
timetable/core/: config.py
timetable/core/models/: __init__.py  base.py  db_helper.py  post.py  profile.py  timetable.py  user.py
timetable/core/schemas/: post.py  profile.py  timetable.py  trener.py  user.py
timetable/crud/: profile.py  timetable.py  trenet.py  users.py
timetable/pages/: router.py
timetable/tasks/: router.py  tasks.py
timetable/templates/: base.html  record.html  registration.html
timetable/utils/: check.py  create_token.py  dependencies.py  validate_token.py
